# fork-lidl-plus

./: .gitignore  execute.py  pyproject.toml
.github/workflows/: python-check.yml  python-publish.yml
lidlplus/: __main__.py  api.py
