[project]
    name = "lidl-plus"
    version = "0.3.5"
    description = "Fetch receipts and more from Lidl Plus"
    readme = "README.md"
    license = { text = "MIT" }
    requires-python = ">=3.10, <3.13"
    authors = [{ name = "Eduard Marbach" }, { name = "Andre Basche" }]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    dependencies = ["requests>=2.28.1"]

    [project.optional-dependencies]
        auth = [
            "getuseragent>=0.0.7",
            "oic>=1.7.0",
            "selenium>=4.6.0",
            "webdriver-manager>=4.0.0",
        ]
        pdf = ["weasyprint>=60.0"]

    [project.urls]
        GitHub = "https://github.com/Andre0512/lidl-plus"
        PyPI = "https://pypi.org/project/lidl-plus/"

    [project.scripts]
        lidl-plus = "lidlplus.__main__:start"

[dependency-groups]
    dev = ["black>=26.0", "flake8>=7.0", "mypy>=1.0", "pylint>=3.0"]

[tool.hatch.build.targets.wheel]
    packages = ["lidlplus"]

[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"
